transitioned to mongoose

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI="mongodb+srv://tbl2024:tbl2024@tbl-cluster.bgx8vgy.mongodb.net/?retryWrites=true&w=majority&appName=TBL-Cluster"
+MONGODB_URI="mongodb+srv://tbl2024:tbl2024@tbl-cluster.bgx8vgy.mongodb.net/TBLData?retryWrites=true&w=majority&appName=TBL-Cluster"
